<resources>
    <string name="loading">Загрузка……</string>
    <string name="app_name">MathWorks</string>
    <string name="title_continue">Играть</string>
    <string name="title_settings">Настройки</string>
    <string name="title_info">О нас</string>
    <string name="info_text">Приложение для <b>Android</b> предполагает возможность развития математических способностей игроков. В приложении планируются задачи на различные темы: арифметика целых чисел, планиметрия, тригонометрия и различные другие.\nНаставники:\n • Дмитрий Иванов\n • Максим Доброхвалов\nУчастники:\n • Вадим Чайкин\n • Даниил Холяк</string>
    <string name="info_version">Версия приложения %1$s: %2$s</string>
    <string name="menu_zone_select">Выберите зону</string>
    <string name="menu_zone_percentage">Пройдено:</string>
    <string name="zone_integer_name">Арифметика целых чисел</string>
    <string name="zone_modulo_name">Модульная арифметика и информатика</string>
    <string name="zone_combine_name">Комбинаторика</string>
    <string name="zone_stats_name">Вероятность и статистика</string>
    <string name="zone_float_name">Арифметика вещественных чисел</string>
    <string name="zone_function_name">Функции</string>
    <string name="zone_triangle_name">Тригонометрия</string>
    <string name="zone_plain_name">Планиметрия</string>
    <string name="zone_stereo_name">Стереометрия</string>
    <string name="zone_deriv_name">Дифференцирование и интегрирование</string>
    <string name="zone_complex_name">Комплексные числа</string>
    <string name="zone_final_name">Финальный босс</string>
    <string name="act_test_boss_welcome">Добро пожаловать!</string>
    <string name="act_test_boss_name">Вступительный тест</string>
    <string name="act_integer_1_name">Акт 1. Сложение и вычитание</string>
    <string name="act_integer_2_name">Акт 2. Умножение и деление</string>
    <string name="act_integer_3_name">Акт 3. Остаток от деления</string>
    <string name="act_integer_4_name">Акт 4. Простые и составные числа</string>
    <string name="act_modulo_1_name">Акт 1. Позиционные системы счисления</string>
    <string name="act_modulo_2_name">Акт 2. Нахождение НОК и НОД</string>
    <string name="act_modulo_3_name">Акт 3. Перевод из одной системы счисления в другую</string>
    <string name="act_modulo_4_name">Акт 4. Основные двоичные операторы</string>
    <string name="act_combine_1_name">Акт 1. Множества</string>
    <string name="act_combine_2_name">Акт 2. Перестановки</string>
    <string name="act_combine_3_name">Акт 3. Размещения</string>
    <string name="act_combine_4_name">Акт 4. Сочетания</string>
    <string name="act_stats_1_name">Акт 1. Вероятность одного события</string>
    <string name="act_stats_2_name">Акт 2. Вероятности нескольких событий</string>
    <string name="act_stats_3_name">Акт 3. Анализ выборки</string>
    <string name="act_stats_4_name">Акт 4. Мода, медиана</string>
    <string name="act_stats_5_name">Акт 5. Дисперсия и среднеквадратичное отклонение</string>
    <string name="act_float_1_name">Акт 1. Дробные числа</string>
    <string name="act_float_2_name">Акт 2. Иррациональные числа</string>
    <string name="act_float_3_name">Акт 3. Математические константы</string>
    <string name="act_float_4_name">Акт 4. Возведение в степень</string>
    <string name="act_float_5_name">Акт 5. Свойства степеней</string>
    <string name="act_float_6_name">Акт 6. Логарифмирование</string>
    <string name="act_float_7_name">Акт 7. Свойства логарифмов</string>
    <string name="act_function_1_name">Акт 1. Основные свойства функций</string>
    <string name="act_function_2_name">Акт 2. Построение графиков</string>
    <string name="act_function_3_name">Акт 3. Линейная функция</string>
    <string name="act_function_4_name">Акт 4. Квадратичная функция</string>
    <string name="act_function_5_name">Акт 5. Степенные функции</string>
    <string name="act_function_6_name">Акт 6. Показательные и логарифмические функции</string>
    <string name="act_function_7_name">Акт 7. Тригонометрические функции</string>
    <string name="act_triangle_1_name">Акт 1. Синус, косинус, тангенс и котангенс</string>
    <string name="act_triangle_2_name">Акт 2. Тригонометрические функции от суммы и разности</string>
    <string name="act_triangle_3_name">Акт 3. Тригонометрические функции от двойного, тройного и половинного угла</string>
    <string name="act_triangle_4_name">Акт 4. Сумма и разность тригонометрических функций</string>
    <string name="act_triangle_5_name">Акт 5. Обратные тригонометрические функции</string>
    <string name="act_plain_1_name">Акт 1. Геометрические примитивы</string>
    <string name="act_plain_2_name">Акт 2. Многоугольники</string>
    <string name="act_plain_3_name">Акт 3. Свойства треугольников и их элементов</string>
    <string name="act_plain_4_name">Акт 4. Решение треугольников</string>
    <string name="act_plain_5_name">Акт 5. Свойства окружностей, касательных и хорд</string>
    <string name="act_plain_6_name">Акт 6. Площади многоугольников</string>
    <string name="act_plain_7_name">Акт 7. Векторы</string>
    <string name="act_stereo_1_name">Акт 1. Взаимное расположение прямых и плоскостей</string>
    <string name="act_stereo_2_name">Акт 2. Правильные многогранники</string>
    <string name="act_stereo_3_name">Акт 3. Полуправильные многогранники</string>
    <string name="act_stereo_4_name">Акт 4. Объём и площадь поверхности</string>
    <string name="act_deriv_1_name">Акт 1. Предел</string>
    <string name="act_deriv_2_name">Акт 2. Непрерывность функции</string>
    <string name="act_deriv_3_name">Акт 3. Производная</string>
    <string name="act_deriv_4_name">Акт 4. Интеграл</string>
    <string name="act_deriv_5_name">Акт 5. Производные и интегралы некоторых функций</string>
    <string name="act_complex_1_name">Акт 1. Комплексные числа</string>
    <string name="act_complex_2_name">Акт 2. Свойства комплексных чисел</string>
    <string name="act_complex_3_name">Акт 3. Комплексная плоскость</string>
    <string name="boss_name">Босс</string>
    <string name="act_test_boss_descr">Добро пожаловать в приложение <b>MathWorks</b>!\nСейчас мы проверим уровень ваших знаний. От того, какие из данных задач вы решите правильно, будет зависеть, какие зоны (сборники уровней &#8212; актов по темам) будут вам открыты. Вступительный тест нельзя пройти повторно.\nЧтобы продолжить, нажмите кнопку «Дальше».</string>
    <string name="act_test_boss_task_1">На планете Артемида есть две валюты: α и β. Известно, что билет в кино стоит %1$s α. Сколько β стоит билет в кино, если по текущему курсу 1 α = %2$s β?</string>
    <string name="act_test_boss_task_2">У меня есть %1$s шаров и много ящиков. В один ящик помещается %2$s шаров. Я либо полностью заполняю каждый ящик, либо оставляю его пустым. Сколько шаров я не смогу положить в ящики?</string>
    <string name="act_test_boss_task_5">Что можно найти по данной формуле?</string>
    <string name="act_test_boss_task_5_variant_0">Число перестановок из n без повторений</string>
    <string name="act_test_boss_task_5_variant_1">Число размещений из n по k без повторений</string>
    <string name="act_test_boss_task_5_variant_2">Число сочетаний из n по k без повторений</string>
    <string name="act_test_boss_task_5_variant_3">Число перестановок из n с повторениями</string>
    <string name="act_test_boss_task_5_variant_4">Число размещений из n по k с повторениями</string>
    <string name="act_test_boss_task_5_variant_5">Число сочетаний из n по k с повторениями</string>
    <string name="act_test_boss_task_5_variant_6">Невозможно определить</string>
    <string name="act_integer_1_descr_1"><b>Сложение</b> &#8212; это объединение двух и более чисел в одно целое. Результат сложения чисел (слагаемых) &#8212; это их сумма. Например, в выражении\n5 + 3 = 8\n5 и 3 &#8212; это слагаемые, 8 &#8212; это сумма.\nОт перестановки слагаемых сумма не изменяется.\n<b>Вычитание</b> — это такое действие, в котором отнимают от одного числа (уменьшаемого) другое (вычитаемое). Результат вычитания — разность. В примере \n19 – 9 = 10\nчисло 19 — уменьшаемое, число 9 — вычитаемое, 10 — разность.\nЕсли вычесть какое-то число из самого себя, то их разность будет равна 0.</string>
    <string name="act_integer_1_descr_2">Сложение и вычитание <b>с переходом через десяток</b> осуществляется тогда, когда либо сумма двух цифр одного разряда больше 9, либо разность этих цифр меньше 0.\nЧтобы осуществить сложение с переходом через десяток, складывают сначала две цифры младшего разряда, затем к старшему разряду прибавляют 1.\nЧтобы выполнить вычитание с переходом через десяток, сначала складывают цифру младшего разряда уменьшаемого с 10, потом из неё вычитают цифру младшего разряда вычитаемого и уменьшают цифру старшего разряда на 1.\nДля сложения и вычитания многозначных чисел (с большим количеством цифр) эти действия выполняются несколько раз.\nК примеру, 234 + 267 = 501.</string>
    <string name="act_integer_1_task_1">В одной бочке было %1$d груш, во второй %2$d яблок. Сколько всего фруктов было в бочках?</string>
    <string name="act_integer_1_task_2">У Никиты было %1$d книг, а у Лёни %2$d книг. На сколько больше книг у Лёни?</string>
    <string name="act_integer_1_task_3">В одном пионерском отряде было %1$d ребят, а в другом &#8212; на %2$d больше. Сколько ребят в обоих отрядах вместе?</string>
    <string name="act_integer_1_task_4">В доме три квартиры. Первая занимает %1$d квадратных метров, вторая &#8212; %2$d квадратных метров, а третья &#8212; %3$d квадратных метров. Сколько квадратных метров занимают все три квартиры вместе?</string>
    <string name="act_integer_1_task_5">Бутылка без пробки стоит %1$d юаней. Пробка стоит на %2$d юаней меньше. Сколько (в юанях) стоит бутылка вместе с пробкой?</string>
    <string name="act_integer_1_task_6">Я загадал число. Если к нему прибавить %1$d и вычесть %2$d, то получится %3$d. Какое это число?</string>
    <string name="act_integer_2_descr_1"><b>Умножение</b> целых чисел есть такое действие, в котором нужно взять одно число слагаемым столько раз, сколько в другом содержится единиц, и найти сумму этих слагаемых.\nУмножить 7 на 3 значит взять число 7 слагаемым три раза и найти сумму. Искомая сумма есть 21.\n7 · 3 = 7 + 7 + 7 = 21 \nТакже при умножении, как и при сложении, выполняется правило: \nПроизведение <b>не изменяется</b> от перемены порядка множителей.\n7 · 3 = 3 · 7 = 3 + 3 + 3 + 3 + 3 + 3 + 3 = 21\nТак как умножение многозначных чисел построено на умножении однозначных, была создана таблица умножения. С её помощью можно найти любое произведение однозначных чисел. Например, чтобы найти произведение 5 · 3, нужно найти число, которое находится на пересечении строки 3 и столбца 5 или наоборот.</string>
    <string name="navigation_forth">Дальше</string>
    <string name="navigation_to_main">На главную</string>
    <string name="task_input_txt">Введите ответ…</string>
    <string name="result_good_test">Молодец!\nВы прошли вступительный тест. По его результатам вам открыты следующие зоны:</string>
    <string name="result_bad">Не отчаивайтесь!\nВ следующий раз вы решите все задачи!</string>
    <string name="task_theory_image">Картинка</string>
    <string name="filler">Заполнитель</string>
    <string name="theme_name">Цветовая тема приложения</string>
</resources>